[gd_scene load_steps=7 format=2]

[ext_resource path="res://Owl/OwlMesh.tscn" type="PackedScene" id=1]
[ext_resource path="res://TreeStump/LowTreeStump.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Main-TwoOwl.gd" type="Script" id=3]
[ext_resource path="res://UDP.gd" type="Script" id=4]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=5]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 0.02, 0.02 )

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.94849, 0.316808, 0, -0.316808, 0.94849, 0, 0.525954, 1.69185 )
fov = 40.0

[node name="CPUParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2939, 0.286873 )
visible = false
amount = 256
lifetime = 12.0
mesh = SubResource( 1 )
emission_shape = 1
emission_sphere_radius = 1.5
gravity = Vector3( 0, -0.1, 0 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.57323, 2.82915 )

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.82627, 2.82915 )

[node name="OwlAndTree" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.454786, 0, 0 )

[node name="TreeStumpMesh" type="MeshInstance" parent="OwlAndTree"]
transform = Transform( 0.399996, 0.000459575, 0.00176093, -0.00176051, -0.000370407, 0.399996, 0.000461203, -0.4, -0.000368378, 0, -0.783984, -0.14606 )
visible = false
mesh = ExtResource( 2 )
material/0 = null

[node name="OwlMesh" parent="OwlAndTree" instance=ExtResource( 1 )]

[node name="OwlAndTree2" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.582815, 0, -0.0500412 )

[node name="TreeStumpMesh" type="MeshInstance" parent="OwlAndTree2"]
transform = Transform( 0.399996, 0.000459575, 0.00176093, -0.00176051, -0.000370407, 0.399996, 0.000461203, -0.4, -0.000368378, 0, -0.783984, -0.14606 )
visible = false
mesh = ExtResource( 2 )
material/0 = null

[node name="OwlMesh" parent="OwlAndTree2" instance=ExtResource( 1 )]

[node name="UDP" type="Node" parent="."]
script = ExtResource( 4 )

[node name="GUI" parent="." instance=ExtResource( 5 )]
